packages/rust/crates/xiuxian-qianji-bpmn-engine/tests/snapshots/bpmn_interaction_loop_missing_feedback_lint_report.snap
---
source: packages/rust/crates/xiuxian-qianji-bpmn-engine/tests/unit/lint/mod.rs
assertion_line: 35
expression: value
---
{
  "domain": "bpmn",
  "source_id": "invalid-interaction-loop-missing-feedback.bpmn",
  "ok": false,
  "issues": [
    {
      "code": "bpmn.loop_risk.unbounded_control_cycle",
      "severity": "error",
      "title": "Workflow cycle is missing a complete loop-progress contract",
      "summary": "Process 'interaction_loop' contains a cyclic path [prepare_question -> more_questions -> ask_user] that can re-enter host/user work without a complete native BPMN progress contract.",
      "why_it_failed": "Cycle progress state is incomplete.",
      "repair_guidance": [
        "<dataInput id=\"prepare_question_Input_answer\" name=\"answer\"/><dataInputAssociation><sourceRef>answer</sourceRef><targetRef>prepare_question_Input_answer</targetRef></dataInputAssociation>"
      ],
      "llm_fix_prompt": "<dataInput id=\"prepare_question_Input_answer\" name=\"answer\"/><dataInputAssociation><sourceRef>answer</sourceRef><targetRef>prepare_question_Input_answer</targetRef></dataInputAssociation>",
      "structured_repair": {
        "actions": [
          {
            "nodes": [
              "prepare_question",
              "more_questions",
              "ask_user"
            ],
            "op": "inspect_cycle"
          },
          {
            "default_reentry_flows": [],
            "op": "ensure_unconditional_default_exit",
            "required": true
          },
          {
            "op": "add_native_outputs_inside_cycle",
            "variables": []
          },
          {
            "op": "add_native_inputs_to_question_service",
            "variables": [
              "answer"
            ]
          }
        ],
        "contract": "bpmn.native.loop.progress.v1",
        "contract_message": "native BPMN loop progress requires in-cycle tasks to consume user feedback and emit the gateway route state through standard IO metadata.",
        "forbid": [
          "repeating a userTask question without feeding the user's prior answer into the next in-cycle serviceTask",
          "routing a cycle on variables that no task inside the cycle declares through native BPMN output metadata",
          "using a conditional default branch instead of an unconditional exit"
        ],
        "line_fixes": [
          {
            "offset": 257,
            "target": "prepare_question.native_inputs",
            "xml": "<dataInput id=\"prepare_question_Input_answer\" name=\"answer\"/><dataInputAssociation><sourceRef>answer</sourceRef><targetRef>prepare_question_Input_answer</targetRef></dataInputAssociation>"
          }
        ],
        "schema_version": 1,
        "strategy": "make_cycle_progress_explicit_or_remove_back_edge"
      },
      "source_diagnostic": {
        "source_id": "invalid-interaction-loop-missing-feedback.bpmn",
        "span": {
          "start": 257,
          "end": 347
        },
        "label": "cycle needs explicit progress state",
        "help": "The loop must feed answer into prepare_question before the next prompt and keep flow_done as the unconditional default exit."
      },
      "evidence": {
        "cycle_node_ids": [
          "prepare_question",
          "more_questions",
          "ask_user"
        ],
        "default_reentry_flows": [],
        "gateway_ids": [
          "more_questions"
        ],
        "has_conditionless_gateway_cycle": false,
        "has_exit_path": true,
        "missing_feedback_inputs": [
          "answer"
        ],
        "missing_progress_outputs": [],
        "process_id": "interaction_loop",
        "route_variables": [
          "hasMoreQuestions"
        ],
        "task_node_ids": [
          "prepare_question",
          "ask_user"
        ],
        "updated_variables_in_cycle": [
          "answer",
          "currentChoices",
          "currentQuestion",
          "hasMoreQuestions"
        ],
        "user_outputs_in_cycle": [
          "answer"
        ],
        "worker_inputs_in_cycle": []
      }
    }
  ]
}
