packages/rust/crates/xiuxian-qianji-bpmn-engine/tests/snapshots/bpmn_unsupported_gateway_lint_report.snap
---
source: packages/rust/crates/xiuxian-qianji-bpmn-engine/tests/unit/lint/mod.rs
assertion_line: 35
expression: value
---
{
  "domain": "bpmn",
  "source_id": "invalid-unsupported-gateway.bpmn",
  "ok": false,
  "issues": [
    {
      "code": "bpmn.unsupported_complex_gateway",
      "severity": "error",
      "title": "Complex gateway execution is deferred",
      "summary": "Process 'gateway_flow' in source 'invalid-unsupported-gateway.bpmn' uses unsupported element '<complexGateway>'.",
      "why_it_failed": "BPMN complex gateways can combine custom activation, fan-in, and fan-out rules. The bounded engine does not execute those semantics yet, so complex gateways must be remodeled into one supported gateway family before runtime validation.",
      "repair_guidance": [
        "Use `exclusiveGateway` when exactly one conditional branch should win.",
        "Use the bounded `inclusiveGateway` subset when one or more conditionally selected branches must rejoin through the supported structured join shape.",
        "Use `parallelGateway` when every branch should run and then synchronize deterministically.",
        "Use `eventBasedGateway` when the route is an exclusive race over supported message, signal, timer, or conditional waits."
      ],
      "llm_fix_prompt": "Repair BPMN source 'invalid-unsupported-gateway.bpmn' by replacing `<complexGateway>` in process 'gateway_flow' with a supported bounded gateway structure: `exclusiveGateway` for one winning branch, structured `inclusiveGateway` for one-or-more branches with a supported join, `parallelGateway` for deterministic all-branch fan-out/fan-in, or `eventBasedGateway` for an exclusive race over supported waits. Preserve the branch intent, but do not rely on complex gateway activation conditions or unstructured synchronization.",
      "structured_repair": {
        "actions": [
          {
            "forbid": "complex gateway activation conditions or unstructured synchronization",
            "from": "complexGateway",
            "op": "replace_element",
            "preserve": "branch intent and BPMN ids where possible",
            "to_options": [
              "exclusiveGateway",
              "inclusiveGateway",
              "parallelGateway",
              "eventBasedGateway"
            ]
          }
        ],
        "contract": "bpmn.native.gateway.complex_deferred.v1",
        "schema_version": 1,
        "strategy": "replace_complex_gateway_with_bounded_gateway"
      },
      "evidence": {
        "deferred_semantics": [
          "activation_condition",
          "custom_fan_in",
          "custom_fan_out",
          "unstructured_synchronization"
        ],
        "element": "complexGateway",
        "process_id": "gateway_flow",
        "recommended_rewrites": [
          "exclusiveGateway",
          "inclusiveGateway",
          "parallelGateway",
          "eventBasedGateway"
        ],
        "source_id": "invalid-unsupported-gateway.bpmn"
      }
    }
  ]
}
