packages/rust/crates/xiuxian-qianji-bpmn-engine/tests/snapshots/simple_unique_eligibility_contract.snap
---
source: packages/rust/crates/xiuxian-qianji-bpmn-engine/tests/unit/dmn.rs
assertion_line: 18
expression: value
---
{
  "source_id": "simple-unique-eligibility.dmn",
  "decision": {
    "decision_id": "loan-decision",
    "source_id": "simple-unique-eligibility.dmn",
    "binding": "decision_ref"
  },
  "name": "Loan Decision",
  "table": {
    "table_id": "decision_table_1",
    "name": null,
    "hit_policy": "unique",
    "inputs": [
      {
        "input_id": "input_1",
        "label": "tier",
        "name": null,
        "expression": "tier",
        "type_ref": "string"
      }
    ],
    "outputs": [
      {
        "output_id": "output_1",
        "label": "approval",
        "name": "approval",
        "type_ref": "string"
      }
    ],
    "rules": [
      {
        "rule_id": "rule_approve",
        "description": null,
        "input_entries": [
          {
            "equals": "gold"
          }
        ],
        "output_entries": [
          {
            "value": "approve"
          }
        ]
      },
      {
        "rule_id": "rule_review",
        "description": null,
        "input_entries": [
          "any"
        ],
        "output_entries": [
          {
            "value": "review"
          }
        ]
      }
    ]
  }
}
